--- a/hoastingphp.yml
+++ b/hoastingphp.yml
@@ -1,1 +1,18 @@
-
+project_name: humanresourcesapp
+framework: laravel
+database:
+  name: humanresourcesapp
+  user: root
+  password: 
+  host: localhost
+  port: 3306
+  auto_migrate: true
+  create_user: true
+commands:
+  - "composer install --no-dev --optimize-autoloader"
+  - "php artisan migrate --force"
+  - "php artisan key:generate"
+  - "php artisan config:cache"
+  - "php artisan route:cache"
+  - "php artisan view:cache"
+  - "php artisan storage:link"
