--- a/hoastingphp.yml
+++ b/hoastingphp.yml
@@ -3,7 +3,7 @@ framework: laravel
 database:
   name: humanresourcesapp
   user: root
-  password: 12345
+  password:
   host: localhost
   port: 3306
   auto_migrate: true
